--- a/site/assets/style.css
+++ b/site/assets/style.css
@@ -51,11 +51,22 @@ nav ul li a {
 }
 
 /* MAIN */
-.main {
-    margin-left: 20vw;
-    margin-right: 20vw;
-    padding: 20px;
-    background: #ecbfb0;
+@media (min-width: 900px){
+    .main {
+        margin-left: 20vw;
+        margin-right: 20vw;
+        padding: 20px;
+        background: #ecbfb0;
+    }
+}
+
+@media (max-width: 900px) {
+    .main {
+        margin-left: 2vw;
+        margin-right: 2vw;
+        padding: 20px;
+        background: #ecbfb0;
+    }
 }
 
 .section {
@@ -73,6 +84,23 @@ nav ul li a {
     padding: 30px;
     margin-left: 10vw;
     margin-right: 10vw;
+}
+
+.family-members {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.profile-box {
+    width: 200px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #f3d2c1;
+}
+
+.profile-box img {
+    width: 180px;
 }
 
 /* FOOTER */
